--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,13 @@
 *.ini
 *.o
 *.a
-.cmake
-project/
 *CMakeCache.txt
 build/include/
+build/.cmake
+build/build.ninja
+build/CMakeCache.txt
+build/cmake_install.cmake
+build/compile_commands.json
+build/Makefile
 build/CMakeFiles/
 include/ImGuiColorTextEdit/TextEditor.o
