--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,10 @@
 *.a
 *CMakeCache.txt
 build/include/
-build/.cmake
+build/.cmake/
 build/build.ninja
 build/CMakeCache.txt
 build/cmake_install.cmake
 build/compile_commands.json
 build/Makefile
 build/CMakeFiles/
-include/ImGuiColorTextEdit/TextEditor.o
