--- a/project (copy).json
+++ b/project (copy).json
@@ -2,15 +2,15 @@
     {
         "fovy": 60.0,
         "position": {
-            "x": 50.0,
-            "y": 0.0,
-            "z": 0.0
+            "x": 47.34920883178711,
+            "y": 30.612028121948242,
+            "z": 8.234254837036133
         },
         "projection": 0,
         "target": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
+            "x": 37.85772705078125,
+            "y": 26.901567459106445,
+            "z": 7.854425430297852
         },
         "type": "camera",
         "up": {
@@ -22,9 +22,9 @@
     {
         "ambientColor": {
             "w": 1.0,
-            "x": 1.0,
-            "y": 1.0,
-            "z": 1.0
+            "x": 0.0,
+            "y": 0.0,
+            "z": 0.0
         },
         "bloom": false,
         "bloomBrightness": 0.0,
@@ -35,7 +35,7 @@
             "y": 1.0,
             "z": 1.0
         },
-        "skyboxPath": "assets/images/skybox/default skybox.hdr",
+        "skyboxPath": "project/game/images/kloppenheim_02_puresky_4k.hdr",
         "type": "world settings"
     },
     {
@@ -51,26 +51,26 @@
                     },
                     "cutOff": 10.0,
                     "direction": {
-                        "x": 0.4000000059604645,
-                        "y": 0.4000000059604645,
-                        "z": -0.4000000059604645
+                        "x": 0.8299999833106995,
+                        "y": -1.0,
+                        "z": 1.0
                     },
                     "id": 2,
-                    "intensity": 0.5,
+                    "intensity": 1.7410000562667847,
                     "isChild": true,
                     "light_type": 1,
                     "name": "Light",
                     "position": {
                         "x": 4.0,
-                        "y": 5.0,
+                        "y": 27.100051879882813,
                         "z": 3.0
                     },
                     "relativePosition": {
                         "x": 4.0,
-                        "y": 5.0,
+                        "y": 9.899995803833008,
                         "z": 3.0
                     },
-                    "specularStrength": 0.5,
+                    "specularStrength": 0.0,
                     "target": {
                         "x": 0,
                         "y": 0,
@@ -81,7 +81,62 @@
             ]
         ],
         "collider": true,
-        "collider_type": 2,
+        "collider_type": 0,
+        "damping": 0.0,
+        "friction": 1.0,
+        "id": 1,
+        "is_dynamic": true,
+        "lodEnabled": true,
+        "mass": 1.0,
+        "material_path": "project/game/materials/file2.mat",
+        "mesh_type": 1,
+        "model_path": "",
+        "name": "Player",
+        "normalTexturePath": "",
+        "position": {
+            "x": 0.0,
+            "y": 17.200056076049805,
+            "z": 0.0
+        },
+        "relativePosition": {
+            "x": 0.0,
+            "y": 0.0,
+            "z": 0.0
+        },
+        "rotation": {
+            "x": 0.0,
+            "y": 0.0,
+            "z": 0.0
+        },
+        "roughnessTexturePath": "",
+        "scale": {
+            "x": 1.0,
+            "y": 1.0,
+            "z": 1.0
+        },
+        "scriptIndex": "player0",
+        "script_path": "project/game/scripts/player.py",
+        "surfaceMaterial": {
+            "DiffuseIntensity": 1.0,
+            "Roughness": 0.42500001192092896,
+            "SpecularIntensity": 0.0,
+            "SpecularTint": {
+                "x": 1.0,
+                "y": 1.0,
+                "z": 1.0
+            },
+            "shininess": 1.0
+        },
+        "texturePath": "",
+        "tiling": [
+            1.0,
+            1.0
+        ],
+        "type": "entity"
+    },
+    {
+        "collider": true,
+        "collider_type": 0,
         "damping": 0.0,
         "friction": 1.0,
         "id": 0,
@@ -91,7 +146,7 @@
         "material_path": "",
         "mesh_type": 1,
         "model_path": "",
-        "name": "Unnamed Entity",
+        "name": "Planet",
         "normalTexturePath": "",
         "position": {
             "x": 0.0,
@@ -110,9 +165,9 @@
         },
         "roughnessTexturePath": "",
         "scale": {
-            "x": 1.0,
-            "y": 1.0,
-            "z": 1.0
+            "x": 24.0,
+            "y": 24.0,
+            "z": 24.0
         },
         "scriptIndex": "",
         "script_path": "",
