--- a/project.json
+++ b/project.json
@@ -42,6 +42,63 @@
         "children": [
             [
                 {
+                    "collider": true,
+                    "collider_type": 2,
+                    "damping": 0.0,
+                    "friction": 1.0,
+                    "id": 1,
+                    "is_dynamic": false,
+                    "lodEnabled": true,
+                    "mass": 1.0,
+                    "material_path": "",
+                    "mesh_type": 1,
+                    "model_path": "",
+                    "name": "Unnamed Entity",
+                    "normalTexturePath": "",
+                    "position": {
+                        "x": 0.0,
+                        "y": 0.0,
+                        "z": 0.0
+                    },
+                    "relativePosition": {
+                        "x": 0.0,
+                        "y": 0.0,
+                        "z": 0.0
+                    },
+                    "rotation": {
+                        "x": 0.0,
+                        "y": 0.0,
+                        "z": 0.0
+                    },
+                    "roughnessTexturePath": "",
+                    "scale": {
+                        "x": 1.0,
+                        "y": 1.0,
+                        "z": 1.0
+                    },
+                    "scriptIndex": "",
+                    "script_path": "",
+                    "surfaceMaterial": {
+                        "DiffuseIntensity": 0.5,
+                        "Roughness": 0.5,
+                        "SpecularIntensity": 0.5,
+                        "SpecularTint": {
+                            "x": 1.0,
+                            "y": 1.0,
+                            "z": 1.0
+                        },
+                        "shininess": 0.5
+                    },
+                    "texturePath": "",
+                    "tiling": [
+                        1.0,
+                        1.0
+                    ],
+                    "type": "entity"
+                }
+            ],
+            [
+                {
                     "attenuation": 9.999999747378752e-05,
                     "color": {
                         "a": 255.0,
@@ -55,7 +112,7 @@
                         "y": 0.4000000059604645,
                         "z": -0.4000000059604645
                     },
-                    "id": 2,
+                    "id": 3,
                     "intensity": 0.5,
                     "isChild": true,
                     "light_type": 1,
